# dedent

./: Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: ci.yml
nix/: treefmt.nix
src/: lib.rs
tests/: mod.rs
tests/trybuild/: non-string-literal.rs  non-string-literal.stderr  valid.rs
