[package]
name = "dedent"
version = "0.1.0"
edition = "2021"
description = "Procedural macro for stripping indentation from multi-line string literals"
license = "MIT"
repository = "https://github.com/nyarthan/dedent"
homepage = "https://github.com/nyarthan/dedent"
documentation = "https://docs.rs/dedent"
keywords = ["string", "formatting", "indentation", "proc-macro"]
categories = ["text-processing"]
authors = ["Jannis Morgenstern <jannis.n.morgenstern@gmail.com>"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"

[dev-dependencies]
trybuild = "1.0.101"
